k8s-jenkins-project/Jenkins/jenkins-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  # The default scope for IngressClass parameters is cluster-wide.
spec:
  controller: k8s.io/ingress-nginx
