k8s-jenkins-project/Jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      securityContext:
            fsGroup: 1000
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          #image: jenkins/jenkins:lts
          # HAd to create an image with docker inside in order to run docker commands
          image: yidgar11/jenkins_lts_with_docker:1.0
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            # Mount Docker socket to allow Jenkins to use Docker commands
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: jenkins-data
              mountPath: /var/jenkins_home
          securityContext:
            privileged: true # Required for Docker access in some cases
      volumes:
        # HostPath volume for Docker socket
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
