k8s-jenkins-project/Jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    # the rewrite-target annotation is overriding everything that is paced ib the api call after / to "/"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080 # jenkins service port is 8080 and target port us 8080

# When you apply this yaml, an ingress resource will be created managed by the ingress-nginx instance.
# Nginx is configured to automatically discover all ingress with the kubernetes.io/ingress.class: "nginx" annotation
# or where ingressClassName: nginx is present.
# Please note that the ingress resource should be placed inside the same namespace of the backend resource.
